data/derived/comb/progs/unify/prog6514.ml.out
Characters 89-115:
  |Sine s -> String.concat("sin(pi*",exprToString s)
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
